appId: com.sofibaby.app
name: Breastfeeding Timer Flow
tags:
  - smoke
  - activities
  - feeding

---
- runFlow: ../../../helpers/setup-with-baby.yaml

- tapOn:
    id: "feeding-card"

- assertVisible:
    id: "feeding-screen"

- tapOn:
    id: "type-breast"

- tapOn:
    id: "start-left-button"

- extendedWaitUntil:
    visible:
      id: "stop-timer-button"
    timeout: 3000

- tapOn:
    id: "stop-timer-button"

- extendedWaitUntil:
    visible:
      id: "home-screen"
    timeout: 15000
